--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.cache filter=lfs diff=lfs merge=lfs -text
 mmlu_data.tar filter=lfs diff=lfs merge=lfs -text
+Alpaca_data_gpt4_zh.jsonl filter=lfs diff=lfs merge=lfs -text
